--- a/ceppp_patient_partenaire/views/ceppp_disponibilite.xml
+++ b/ceppp_patient_partenaire/views/ceppp_disponibilite.xml
@@ -8,6 +8,7 @@
                 <sheet>
                     <group>
                         <field name="name" />
+                        <field name="sequence" />
                     </group>
                 </sheet>
             </form>
@@ -74,6 +75,11 @@
         <field name="model">ceppp.disponibilite</field>
         <field name="arch" type="xml">
             <tree>
+                <field
+                    name="sequence"
+                    widget="handle"
+                    groups="ceppp_patient_partenaire.group_ceppp_patient_partenaire_manager"
+                />
                 <field name="name" />
             </tree>
         </field>
