[UPD] ceppp_patient_partenaire wizard member create: hide can send email

--- a/ceppp_patient_partenaire/wizards/create_member_views.xml
+++ b/ceppp_patient_partenaire/wizards/create_member_views.xml
@@ -26,12 +26,12 @@
                     <field name="email" />
                     <field name="langue" />
                 </group>
-                <div>
-                    <p>
-                        La création d'un membre va lui envoyer une invitation par courriel pour se joindre à la
-                        plateforme.
-                    </p>
-                </div>
+                <!--                <div>-->
+                <!--                    <p>-->
+                <!--                        La création d'un membre va lui envoyer une invitation par courriel pour se joindre à la-->
+                <!--                        plateforme.-->
+                <!--                    </p>-->
+                <!--                </div>-->
                 <footer>
                     <button name="create_member" string="Créer" type="object" class="oe_highlight" />
                     <button string="Cancel" class="oe_link" special="cancel" />
