--- a/ceppp_patient_partenaire/views/portal_templates.xml
+++ b/ceppp_patient_partenaire/views/portal_templates.xml
@@ -14,11 +14,20 @@
         <xpath expr="//div[hasclass('o_portal_my_details')]" position="after">
             <br />
             <div>
-                <h4>Vos documents</h4>
+                <h4>Mon consentement</h4>
                 <hr class="mt-1 mb-0" />
-                <a role="button" href="/Attachments" class="btn btn-sm btn-link">
+                <a role="button" href="/Attachments" class="btn btn-sm btn-link" style="text-align:left;">
                     <i class="fa fa-eye" />
-                    Voir les documents
+                    Voir mes consentements<br />
+                    <i class="fa fa-check" t-if="consentement_notification" />
+                    <i class="fa fa-thumbs-o-down" t-if="not consentement_notification" />
+                    Notification<br />
+                    <i class="fa fa-check" t-if="consentement_recrutement" />
+                    <i class="fa fa-thumbs-o-down" t-if="not consentement_recrutement" />
+                    Recrutement<br />
+                    <i class="fa fa-check" t-if="consentement_recherche" />
+                    <i class="fa fa-thumbs-o-down" t-if="not consentement_recherche" />
+                    Recherche<br />
                 </a>
             </div>
         </xpath>
