[UPD] ceppp_pp: hide consentement into portal if not patient

--- a/ceppp_patient_partenaire/views/portal_templates.xml
+++ b/ceppp_patient_partenaire/views/portal_templates.xml
@@ -12,28 +12,30 @@
 
     <template id="portal_layout_mon_consentement" name="Mon consentement" inherit_id="portal.portal_layout">
         <xpath expr="//div[hasclass('o_portal_my_details')]" position="after">
-            <br />
-            <div>
-                <h4>Mon consentement</h4>
-                <hr class="mt-1 mb-0" />
-                <a role="button" href="/Attachments" class="btn btn-sm btn-link" style="text-align:left;">
-                    <i class="fa fa-eye" />
-                    Voir mes consentements
-                    <br />
-                    <i class="fa fa-check" t-if="consentement_notification" />
-                    <i class="fa fa-thumbs-o-down" t-if="not consentement_notification" />
-                    Notification
-                    <br />
-                    <i class="fa fa-check" t-if="consentement_recrutement" />
-                    <i class="fa fa-thumbs-o-down" t-if="not consentement_recrutement" />
-                    Recrutement
-                    <br />
-                    <i class="fa fa-check" t-if="consentement_recherche" />
-                    <i class="fa fa-thumbs-o-down" t-if="not consentement_recherche" />
-                    Recherche
-                    <br />
-                </a>
-            </div>
+            <t t-if="is_patient">
+                <br />
+                <div>
+                    <h4>Mon consentement</h4>
+                    <hr class="mt-1 mb-0" />
+                    <a role="button" href="/Attachments" class="btn btn-sm btn-link" style="text-align:left;">
+                        <i class="fa fa-eye" />
+                        Voir mes consentements
+                        <br />
+                        <i class="fa fa-check" t-if="consentement_notification" />
+                        <i class="fa fa-thumbs-o-down" t-if="not consentement_notification" />
+                        Notification
+                        <br />
+                        <i class="fa fa-check" t-if="consentement_recrutement" />
+                        <i class="fa fa-thumbs-o-down" t-if="not consentement_recrutement" />
+                        Recrutement
+                        <br />
+                        <i class="fa fa-check" t-if="consentement_recherche" />
+                        <i class="fa fa-thumbs-o-down" t-if="not consentement_recherche" />
+                        Recherche
+                        <br />
+                    </a>
+                </div>
+            </t>
         </xpath>
     </template>
 
